# packages/shared-types/openapi.json
@@ -149,12 +149,17 @@
             "fechaHoraFin": {
               "type": "string",
               "format": "date-time"
+            },
+            "cuposDisponibles": {
+              "type": "integer",
+              "minimum": 0
             }
           },
           "required": [
             "id",
             "fechaHoraInicio",
-            "fechaHoraFin"
+            "fechaHoraFin",
+            "cuposDisponibles"
           ]
         }
       },
